--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,8 @@ pipeline {
         stage('Pytest') {  
             steps {
                 git branch: 'main', url: 'https://github.com/Saharshkp/QAPractical'
-                sh './test.sh'
+                sh '''sudo chmod +x test.sh
+                ./test.sh'''
             }
         }
         stage('Pip install'){
