--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
             steps {
                 sh "scp -i ~/.ssh/id_rsa docker-compose.yaml swarmmanager:~/QAPractical/docker-compose.yaml"
                 sh "scp -i ~/.ssh/id_rsa nginx.conf swarmmanager:/home/spacebook/QAPractical/nginx.conf"
-                sh "ansible-playbook -i ansible/inventory.yaml ansible/playbook.yaml"
+                sh "ansible-playbook ansible/inventory.yaml -i ansible/playbook.yaml"
             }
         }
     }
