--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,9 +22,9 @@ pipeline {
                 pip3 install gunicorn'''
             }
         }
-        stage('Deploy') {
+        stage('Ansible Deploy') {
             steps {
-                sh "scp -i ~/.ssh/id_rsa docker-compose.yaml swarmmanager:~/QAPractical/docker-compose.yaml"
+                sh "scp -i ~/.ssh/id_rsa docker-compose.yaml swarmmanager:/home/spacebook/QAPractical/docker-compose.yaml"
                 sh "scp -i ~/.ssh/id_rsa nginx.conf swarmmanager:/home/spacebook/QAPractical/nginx.conf"
                 sh "ansible-playbook ansible/inventory.yaml -i ansible/playbook.yaml"
             }
