--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
             steps {
                 sh "scp -i ~/.ssh/id_rsa docker-compose.yaml spacebook@swarmmanager:/home/spacebook/QAPractical/docker-compose.yaml"
                 sh "scp -i ~/.ssh/id_rsa nginx.conf spacebook@swarmmanager:/home/spacebook/QAPractical/nginx.conf"
-                sh "ansible-playbook ansible/inventory.yaml -i ansible/playbook.yaml"
+                sh "ssh spacebook@swarmmanager 'ansible-playbook ansible/inventory.yaml -i ansible/playbook.yaml'"
             }
         }
     }
