--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,5 +29,29 @@ pipeline {
                 sh "ssh spacebook@swarmmanager 'ansible-playbook -i /home/spacebook/QAPractical/ansible/inventory /home/spacebook/QAPractical/ansible/playbook.yaml'"
             }
         }
+        stage('Docker login and build'){
+                steps{
+                    sh '''docker-compose build 
+                        docker login --username $DOCKER_HUB_CREDS_USR --password $DOCKER_HUB_CREDS_PSW
+                        docker-compose push'''
+                }
+            }
+
+            stage('Swarm Deployment'){
+                steps{
+
+                    sh '''scp docker-compose.yaml spacebook@swarmmanager:/home/spacebook/
+                    scp nginx.conf spacebook@swarmmanager:/home/spacebook/
+                    ssh spacebook@swarmmanager docker stack deploy --compose-file docker-compose.yaml deployment-stack'''
+                }
+            }
+            
+            stage('Curl'){
+                steps{
+                    sh ''' curl swarmmanager
+                    curl swarmworker
+                    '''
+                }
+            }
     }
 }
